# compiler-starter-project

./: .Dockerfile  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  start.sh
compiler-starter-project/: main.py
src/: Pipfile  calc.py  main.py  main.ui
src/components/: lexica.py  main.ui  memory.py  parsers.py
src/example/: main.py
src/example/components/: main.ui  parsers.py  ui.py
src/example/components/ast/: statement.py
