[project]
name = "compiler-starter-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyside6>=6.10.2",
    "sly",
]

[tool.uv.sources]
sly = { git = "https://github.com/dabeaz/sly", branch = "master"}

[tool.uv]
package = true
